--- a/app/src/main/res/layout/student_1.xml
+++ b/app/src/main/res/layout/student_1.xml
@@ -13,19 +13,21 @@
         android:layout_height="144dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/shapka_student"
-        tools:layout_editor_absoluteY="-5dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/shapka_student" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
         android:fontFamily="@font/montserrat_semibold"
         android:text="МАСТЕРСКАЯ УЧЕНИКА"
         android:textSize="27dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="33dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.231" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -33,6 +35,8 @@
         android:layout_height="249dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/kalyaka1" />
 
@@ -40,26 +44,31 @@
         android:id="@+id/button2"
         android:layout_width="291dp"
         android:layout_height="69dp"
+        android:layout_marginBottom="184dp"
         android:backgroundTint="#FDFDFD"
         android:fontFamily="@font/montserrat_semibold"
         android:text="У меня уже есть аккаунт"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="476dp" />
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/kalyaka2"
-        tools:layout_editor_absoluteY="277dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/kalyaka2" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="394dp"
         android:layout_height="201dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/montserrat_semibold"
         android:gravity="center"
         android:text=" Находи опытных
@@ -69,12 +78,14 @@
         успеха!"
         android:textSize="23dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="202dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="216dp"
         android:layout_height="63dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/Background_blue"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Зарегистрироваться"
@@ -82,7 +93,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="426dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
