--- a/app/src/main/res/layout/student_1.xml
+++ b/app/src/main/res/layout/student_1.xml
@@ -16,76 +16,50 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shapka_student" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_semibold"
-        android:text="МАСТЕРСКАЯ УЧЕНИКА"
-        android:textSize="27dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.231" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="117dp"
-        android:layout_height="249dp"
+        android:layout_width="167dp"
+        android:layout_height="355dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/kalyaka1" />
+        app:srcCompat="@drawable/fon2_1" />
+
 
     <Button
         android:id="@+id/button2"
         android:layout_width="291dp"
         android:layout_height="69dp"
-        android:layout_marginBottom="184dp"
-        android:backgroundTint="#FDFDFD"
+        android:layout_marginBottom="172dp"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/montserrat_semibold"
         android:text="У меня уже есть аккаунт"
         android:textColor="@color/black"
+        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="438dp"
+        android:layout_height="552dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kalyaka2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="394dp"
-        android:layout_height="201dp"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/montserrat_semibold"
-        android:gravity="center"
-        android:text=" Находи опытных
-        репетиторов, готовых помочь
-        тебе освоить любой предмет.
-        Давай вместе достигнем
-        успеха!"
-        android:textSize="23dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintVertical_bias="0.91"
+        app:srcCompat="@drawable/fon2_2" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="216dp"
         android:layout_height="63dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="280dp"
         android:backgroundTint="@color/Background_blue"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Зарегистрироваться"
@@ -93,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
