--- a/app/src/main/res/layout/student_enter_1.xml
+++ b/app/src/main/res/layout/student_enter_1.xml
@@ -18,19 +18,6 @@
         app:srcCompat="@drawable/shapka_student" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:fontFamily="@font/montserrat_semibold"
-        android:text="МАСТЕРСКАЯ УЧЕНИКА"
-        android:textSize="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.231" />
-
-    <TextView
         android:id="@+id/textView5"
         android:layout_width="406dp"
         android:layout_height="76dp"
@@ -47,15 +34,14 @@
         android:id="@+id/editTextText"
         android:layout_width="407dp"
         android:layout_height="60dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
         android:hint="Номер телефона:"
         android:inputType="text"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
         android:id="@+id/editTextText2"
@@ -69,22 +55,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.178" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="195dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="268dp"
+        android:layout_width="297dp"
+        android:layout_height="78dp"
+        android:layout_marginBottom="184dp"
         android:backgroundTint="@color/Background_blue"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Войти"
         android:textColor="@color/black"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        app:layout_constraintVertical_bias="0.968" />
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
