--- a/app/src/main/res/layout/student_register1.xml
+++ b/app/src/main/res/layout/student_register1.xml
@@ -63,9 +63,11 @@
         android:text="Зарегистрироваться"
         android:textColor="@color/black"
         android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="474dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.672" />
 
     <EditText
         android:id="@+id/editTextText"
