--- a/app/src/main/res/layout/student_choice.xml
+++ b/app/src/main/res/layout/student_choice.xml
@@ -23,5 +23,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="604dp"
+        android:layout_gravity="center" />
 </LinearLayout>
