--- a/app/src/main/res/layout/student_choice.xml
+++ b/app/src/main/res/layout/student_choice.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Student_choice"
+    tools:context=".UI.Student_choice"
     android:orientation="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
