--- a/app/src/main/res/layout/student_register2.xml
+++ b/app/src/main/res/layout/student_register2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".StudentRegister2"
+    tools:context=".UI.StudentRegister2"
     android:background="#FEFEFE">
 
     <ImageView
