--- a/app/src/main/res/layout/teacher_register1.xml
+++ b/app/src/main/res/layout/teacher_register1.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".TeacherRegister1"
+    tools:context=".UI.TeacherRegister1"
     android:background="#FEFEFE">
 
     <ImageView
