--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.StartFragment">
+    tools:context=".UI.StartFragment"
+    android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:src="@drawable/fon"
-        tools:layout_editor_absoluteY="93dp"
-        tools:ignore="MissingConstraints" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="4dp"-->
+<!--        android:src="@drawable/fon"-->
+<!--        tools:layout_editor_absoluteY="93dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
     <TextView
         android:id="@+id/textView"
@@ -38,14 +39,14 @@
         tools:layout_editor_absoluteY="124dp"
         tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/fon1_2"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="522dp"
-        tools:ignore="MissingConstraints" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:src="@drawable/fon1_2"-->
+<!--        tools:layout_editor_absoluteX="48dp"-->
+<!--        tools:layout_editor_absoluteY="522dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
     <Button
         android:id="@+id/button_stud"
@@ -73,21 +74,21 @@
         tools:layout_editor_absoluteY="434dp"
         tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:src="@drawable/fon1_4"
-        tools:layout_editor_absoluteY="26dp"
-        tools:ignore="MissingConstraints" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:src="@drawable/fon1_4"-->
+<!--        tools:layout_editor_absoluteY="26dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/fon1_3"
-        tools:layout_editor_absoluteY="313dp"
-        tools:ignore="MissingConstraints" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView7"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:src="@drawable/fon1_3"-->
+<!--        tools:layout_editor_absoluteY="313dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
+</LinearLayout>
