--- a/app/src/main/res/layout/student_register1.xml
+++ b/app/src/main/res/layout/student_register1.xml
@@ -71,18 +71,15 @@
 
     <EditText
         android:id="@+id/editTextText"
-        android:layout_width="407dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Номер телефона:"
         android:inputType="text"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextText2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextText2"
