--- a/app/src/main/res/navigation/navig_graph.xml
+++ b/app/src/main/res/navigation/navig_graph.xml
@@ -44,5 +44,32 @@
         android:id="@+id/teacher1"
         android:name="com.example.our_trpp_project.UI.Teacher1"
         android:label="teacher_1"
-        tools:layout="@layout/teacher_1" />
+        tools:layout="@layout/teacher_1" >
+        <action
+            android:id="@+id/action_teacher1_to_teacherRegister1"
+            app:destination="@id/teacherRegister1" />
+    </fragment>
+    <fragment
+        android:id="@+id/teacherRegister1"
+        android:name="com.example.our_trpp_project.UI.TeacherRegister1"
+        android:label="teacher_register1"
+        tools:layout="@layout/teacher_register1" >
+        <action
+            android:id="@+id/action_teacherRegister1_to_teacherRegister2"
+            app:destination="@id/teacherRegister2" />
+    </fragment>
+    <fragment
+        android:id="@+id/teacherRegister2"
+        android:name="com.example.our_trpp_project.UI.TeacherRegister2"
+        android:label="teacher_register2"
+        tools:layout="@layout/teacher_register2" >
+        <action
+            android:id="@+id/action_teacherRegister2_to_teacherRegister3"
+            app:destination="@id/teacherRegister3" />
+    </fragment>
+    <fragment
+        android:id="@+id/teacherRegister3"
+        android:name="com.example.our_trpp_project.UI.TeacherRegister3"
+        android:label="teacher_register3"
+        tools:layout="@layout/teacher_register3" />
 </navigation>
