--- a/app/src/main/res/layout/fragment_student_main1.xml
+++ b/app/src/main/res/layout/fragment_student_main1.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -20,9 +19,35 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/shapka_student" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:text=""
+            android:textColor="@color/black" />
+
+        <EditText
+            android:id="@+id/editTextText9"
+            android:layout_width="322dp"
+            android:layout_height="66dp"
+            android:ems="10"
+            android:inputType="text"
+            android:text="Введите предмет или имя" />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="604dp"
+        android:layout_height="550dp"
         android:layout_gravity="center" />
+
+
 </LinearLayout>
