--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,25 +21,26 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/montserrat_semibold"
         android:text="МАСТЕРСКАЯ"
         android:textSize="40dp"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="71dp"
-        tools:ignore="MissingConstraints" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="120dp"
         android:fontFamily="@font/montserrat_semibold"
         android:text="ЗНАНИЙ"
         android:textSize="40dp"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="124dp"
-        tools:ignore="MissingConstraints" />
-
-<!--    <ImageView-->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--    <ImageView-->
 <!--        android:id="@+id/imageView3"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
@@ -47,6 +48,8 @@
 <!--        tools:layout_editor_absoluteX="48dp"-->
 <!--        tools:layout_editor_absoluteY="522dp"-->
 <!--        tools:ignore="MissingConstraints" />-->
+
+
 
     <Button
         android:id="@+id/button_stud"
@@ -74,7 +77,8 @@
         tools:layout_editor_absoluteY="434dp"
         tools:ignore="MissingConstraints" />
 
-<!--    <ImageView-->
+
+    <!--    <ImageView-->
 <!--        android:id="@+id/imageView2"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
@@ -91,4 +95,33 @@
 <!--        android:src="@drawable/fon1_3"-->
 <!--        tools:layout_editor_absoluteY="313dp"-->
 <!--        tools:ignore="MissingConstraints" />-->
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="375dp"
+        android:layout_height="473dp"
+        android:layout_marginBottom="-130dp"
+        android:src="@drawable/elem2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="186dp"
+        android:layout_height="364dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="308dp"
+        android:src="@drawable/elem3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="232dp"
+        android:layout_height="384dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="224dp"
+        android:src="@drawable/elem1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
