--- a/app/src/main/res/layout/fragment_student1.xml
+++ b/app/src/main/res/layout/fragment_student1.xml
@@ -16,8 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shapka_student" />
 
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="190dp"
+        android:layout_height="342dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="288dp"
+        android:src="@drawable/elem4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-<!--    <ImageView-->
+    <!--    <ImageView-->
 <!--        android:id="@+id/imageView5"-->
 <!--        android:layout_width="167dp"-->
 <!--        android:layout_height="355dp"-->
@@ -27,6 +36,26 @@
 <!--        app:layout_constraintHorizontal_bias="0.0"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:srcCompat="@drawable/fon2_1" />-->
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="190dp"
+        android:layout_height="342dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginBottom="-80dp"
+        android:src="@drawable/elem6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="501dp"
+        android:layout_height="144dp"
+        android:layout_marginStart="-40dp"
+        android:layout_marginTop="216dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/elem5" />
 
 
     <Button
