--- a/app/src/main/res/layout/fragment_student_main1.xml
+++ b/app/src/main/res/layout/fragment_student_main1.xml
@@ -25,29 +25,35 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:text=""
-            android:textColor="@color/black" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="match_parent"
+                android:layout_height="73dp"
+                tools:src="@tools:sample/avatars" />
 
         <EditText
             android:id="@+id/editTextText9"
-            android:layout_width="322dp"
+            android:layout_width="275dp"
             android:layout_height="66dp"
             android:ems="10"
-            android:inputType="text"
-            android:text="Введите предмет или имя" />
+            android:hint="Введите предмет или имя"
+            android:inputType="text" />
+
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="    Мой профиль" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="550dp"
         android:layout_gravity="center" />
+
+
 
 
 </LinearLayout>
