--- a/app/src/main/res/layout/fragment_student1.xml
+++ b/app/src/main/res/layout/fragment_student1.xml
@@ -7,62 +7,73 @@
     android:background="#FEFEFE"
     >
 
+
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="501dp"
+        android:id="@+id/imageView"
+        android:layout_width="450dp"
         android:layout_height="144dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="-10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/shapka_student" />
-
-    <!--    <ImageView-->
-<!--        android:id="@+id/imageView5"-->
-<!--        android:layout_width="167dp"-->
-<!--        android:layout_height="355dp"-->
-<!--        android:layout_marginBottom="4dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:srcCompat="@drawable/fon2_1" />-->
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="190dp"
-        android:layout_height="342dp"
-        android:layout_marginStart="232dp"
-        android:layout_marginBottom="292dp"
+        android:layout_width="243dp"
+        android:layout_height="368dp"
         android:src="@drawable/elem4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.295" />
 
     <ImageView
         android:id="@+id/imageView13"
-        android:layout_width="190dp"
-        android:layout_height="342dp"
-        android:layout_marginTop="476dp"
-        android:layout_marginEnd="224dp"
+        android:layout_width="240dp"
+        android:layout_height="251dp"
         android:src="@drawable/elem6"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/imageView6"-->
+    <!--        android:layout_width="438dp"-->
+    <!--        android:layout_height="552dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:layout_constraintVertical_bias="0.91"-->
+    <!--        app:srcCompat="@drawable/fon2_2" />-->
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="501dp"
+        android:layout_width="300dp"
         android:layout_height="144dp"
-        android:layout_marginStart="-50dp"
-        android:layout_marginTop="216dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.448"
         app:srcCompat="@drawable/elem5" />
-
 
     <Button
         android:id="@+id/button2"
         android:layout_width="291dp"
         android:layout_height="69dp"
-        android:layout_marginBottom="172dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/montserrat_semibold"
         android:text="У меня уже есть аккаунт"
@@ -70,33 +81,24 @@
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView6"-->
-<!--        android:layout_width="438dp"-->
-<!--        android:layout_height="552dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.91"-->
-<!--        app:srcCompat="@drawable/fon2_2" />-->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="216dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="280dp"
+        android:layout_width="223dp"
+        android:layout_height="71dp"
         android:backgroundTint="@color/Background_blue"
         android:fontFamily="@font/montserrat_semibold"
         android:text="Зарегистрироваться"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.634" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
