--- a/app/src/main/res/layout/item_subject.xml
+++ b/app/src/main/res/layout/item_subject.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Subject Name"
+        android:fontFamily="@font/montserrat_semibold"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -16,6 +17,7 @@
         android:id="@+id/tutorRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp" />
 
 </LinearLayout>
