--- a/app/src/main/res/layout/item_tutor.xml
+++ b/app/src/main/res/layout/item_tutor.xml
@@ -2,13 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="45dp"
+        android:src="@drawable/ava2" />
 
     <TextView
         android:id="@+id/tutorName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tutor Name"
-        android:textSize="16sp" />
+        android:layout_width="320dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/montserrat_regular"
+        android:text="учитель"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:layout_marginTop="12dp"
+        android:textStyle="bold" />
 
 </LinearLayout>
