--- a/app/src/main/res/layout/student_register1.xml
+++ b/app/src/main/res/layout/student_register1.xml
@@ -10,95 +10,115 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="501dp"
+        android:layout_width="450dp"
         android:layout_height="144dp"
-        android:layout_marginEnd="-35dp"
-        android:layout_marginBottom="588dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="-10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/shapka_student" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="103dp"
-        android:layout_height="267dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="316dp"
+        android:layout_width="137dp"
+        android:layout_height="279dp"
+        android:layout_marginEnd="296dp"
         android:src="@drawable/fon3_1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.356" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="105dp"
-        android:layout_height="212dp"
-        android:layout_marginStart="316dp"
-        android:layout_marginTop="300dp"
+        android:layout_width="139dp"
+        android:layout_height="242dp"
+        android:layout_marginStart="280dp"
         android:src="@drawable/fon3_2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.605" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="329dp"
         android:layout_height="169dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="572dp"
         android:src="@drawable/fon3_3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="221dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="476dp"
+        android:layout_width="245dp"
+        android:layout_height="74dp"
         android:backgroundTint="@color/Background_blue"
         android:text="Зарегистрироваться"
         android:textColor="@color/black"
         android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.728" />
 
     <EditText
         android:id="@+id/editTextText"
-        android:layout_width="407dp"
+        android:layout_width="390dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="204dp"
         android:ems="10"
         android:hint="Номер телефона:"
         android:inputType="text"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.295" />
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="407dp"
+        android:layout_width="390dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="268dp"
         android:ems="10"
         android:hint="Пароль:"
         android:inputType="text"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.384" />
 
     <EditText
         android:id="@+id/editTextText3"
-        android:layout_width="407dp"
+        android:layout_width="390dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="332dp"
         android:ems="10"
         android:hint="Повторите пароль:"
         android:inputType="text"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.473" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
