--- a/app/src/main/res/layout/fragment_student_cabinet.xml
+++ b/app/src/main/res/layout/fragment_student_cabinet.xml
@@ -59,6 +59,14 @@
         android:layout_gravity="center"/>
 
     <TextView
+        android:id="@+id/textView_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Пароль"
+        android:visibility="visible"
+        android:layout_gravity="center"/>
+
+    <TextView
         android:id="@+id/textView_city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
