Изменение кабинета ученика, обновление интерфейса

--- a/app/src/main/res/layout/fragment_student_cabinet.xml
+++ b/app/src/main/res/layout/fragment_student_cabinet.xml
@@ -7,97 +7,47 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="450dp"
+        android:layout_height="144dp"
+        android:layout_marginTop="-10dp"
+        android:layout_marginStart="-25dp"
+        app:srcCompat="@drawable/shapka_student" />
+
+
+    <ImageView
         android:id="@+id/imageView5"
         android:layout_width="244dp"
         android:layout_height="226dp"
         tools:src="@drawable/ava2"
         android:layout_gravity="center"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-
-        <Button
-            android:id="@+id/button_toggle_visibility"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/Background_blue"
-            android:onClick="toggleVisibility"
-            android:text="Изменить"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button_save"
-            android:layout_width="195dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/Background_blue"
-            android:onClick="toggleVisibility"
-            android:text="Сохранить"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/button_Back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Назад" />
-
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/textView_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Имя"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:id="@+id/textView_telephone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Номер телефона"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:id="@+id/textView_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Пароль"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:id="@+id/textView_city"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Город"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:id="@+id/textView_class"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Класс"
-        android:visibility="visible"
-        android:layout_gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="95dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_telephone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="35dp"
+            android:textSize="16sp"
+            android:text="Номер телефона"
+            android:visibility="visible"/>
+
 
         <TextView
             android:id="@+id/textView_edit_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:textSize="16sp"
             android:text="Изменяемый текст 1"
             android:visibility="visible" />
 
@@ -105,6 +55,7 @@
         <EditText
             android:id="@+id/editText_edit_number"
             android:layout_width="match_parent"
+            android:fontFamily="@font/montserrat_regular"
             android:layout_height="wrap_content"
             android:visibility="gone" />
 
@@ -113,13 +64,27 @@
     <!-- Второе редактируемое поле -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="60dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:text="Пароль"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/textView_edit_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
             android:text="Изменяемый текст 2"
             android:visibility="visible" />
 
@@ -128,6 +93,7 @@
             android:id="@+id/editText_edit_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="gone" />
 
     </LinearLayout>
@@ -135,13 +101,27 @@
     <!-- Третье редактируемое поле -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="60dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:text="Имя"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/textView_edit_Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
             android:text="Изменяемый текст 3"
             android:visibility="visible" />
 
@@ -150,6 +130,7 @@
             android:id="@+id/editText_edit_Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="gone" />
 
     </LinearLayout>
@@ -157,14 +138,28 @@
     <!-- Четвертое редактируемое поле -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="60dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:text="Класс"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/textView_edit_grade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Изменяемый текст 4"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="visible" />
 
         <!-- EditText -->
@@ -172,6 +167,7 @@
             android:id="@+id/editText_edit_grade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="gone" />
 
     </LinearLayout>
@@ -179,14 +175,28 @@
     <!-- Пятое редактируемое поле -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="80dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:text="Город"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/textView_edit_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
             android:text="Изменяемый текст 5"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="visible" />
 
         <!-- EditText -->
@@ -194,10 +204,55 @@
             android:id="@+id/editText_edit_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/montserrat_regular"
             android:visibility="gone" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
+        <Button
+            android:id="@+id/button_toggle_visibility"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/Background_blue"
+            android:onClick="toggleVisibility"
+            android:text="Изменить"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/button_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/Background_blue"
+            android:onClick="toggleVisibility"
+            android:text="Сохранить"
+            android:textColor="@color/black" />
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_Back"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/Background_blue"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:text="Назад" />
 
 </LinearLayout>
